2002-02-23  Koichi INOUE  <inoue@argv.org>

	* emacspeak-m17n-setup.el, bep-setup.el:
	C-e x m r: new command emacspeak-m17n-set-rate-offset.
	This command asks language name(ja, en) and offset(like -80).
	Then calls emacspeak-m17n-sync-rate-offset to send the parameter
	to Speech server.

2002-02-18  Koichi INOUE  <inoue@argv.org>

	* emacspeak-m17n-ja.el: New structure of
	emacspeak-m17n-ja-strategy-alist . Each entry has three element
	name, strategy for buffer content, strategy for other things like
	messages.

2002-02-16  KIRIAKE Masanori  <seiken@ARGV.org>

	* lisp/emacspeak-mew.el:
	New key binding: reading from, to, cc, newsgroups header.
	(mew-message-next-msg): Advice modified.
	(emacspeak-mew-speak-newsgroups): new function.

2002-02-15  Koichi INOUE  <inoue@argv.org>

	* bep-setup.el: fixed typo.
	* emacspeak-m17n-ja.el: emacspeak-m17n-ja-strategy-alist is now an
	alist containing strateg cons cell, containing strategy and its
	feedback string.

2002-02-14  KIRIAKE Masanori  <seiken@ARGV.org>

	* lisp/emacspeak-mew.el: new functions
	(emacspeak-mew-speak-header)
	(emacspeak-mew-speak-from)
	(emacspeak-mew-speak-to)
	(emacspeak-mew-speak-subject)

	* lisp/emacspeak-mew.el: Modify auto-reading message feature.

2002-02-12  Mitsugu SAKAMOTO  <mitsugu@argv.org>

	* lisp/emacspeak-mew.el: added Auto-reading feature goto
	mew-message buffer.
	Written Kiriake MASANORI <seiken@argv.org>

2002-02-11  Koichi INOUE  <inoue@argv.org>

	* bep-setup.el: Added keymap of
	emacspeak-m17jn-auto-put-language-mode (C-e x m a) and
	emacspeak-m17n-ja-toggle-strategy (C-e x m s)
	to Emacspeak's personal keymap.

2002-02-09  Koichi INOUE  <inoue@argv.org>

	* lisp/emacspeak-w3m.el: Fixed voicification to work.

2002-02-07  Mitsugu SAKAMOTO  <mitsugu@argv.org>

	* lisp/emacspeak-w3m.el: If cursor move anchor, display URL
	message Buffer not speak.

2002-02-07  Koichi INOUE  <inoue@argv.org>

	* lisp/emacspeak-w3m.el: Voicify hyperlinks.
